Fixed z-index for navigation menu, script for mobile layout menu links, added anchor links to page sections

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -8,7 +8,7 @@ nav {
   width: 100%;
   height: 50px;
   background-color: #212121;
-  z-index: 2;
+  z-index: 4;
 }
 
 .menu {
